--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build-css": "tailwind build src/index.css -o src/tailwind.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
